prod_snapshot_2015-09-24_1030/objects/Angel_Data__c.object
<CustomObject>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <label>Agent Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Direction__c</fullName>
        <label>Call Direction</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Notes__c</fullName>
        <label>Call Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dialed_Number__c</fullName>
        <label>Dialed Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Skill__c</fullName>
        <label>Requested Skill</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Talk_Time_Minutes__c</fullName>
        <formula>Talk_Time_Seconds__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Talk Time (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Talk_Time_Seconds__c</fullName>
        <label>Talk Time (Seconds)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Enter_Queue__c</fullName>
        <label>Time Enter Queue</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Time_Minutes__c</fullName>
        <formula>Total_Time_Seconds__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_Seconds__c</fullName>
        <label>Total Time (Seconds)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_Time_Minutes__c</fullName>
        <formula>Transfer_Time_Seconds__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transfer Time (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_Time_Seconds__c</fullName>
        <label>Transfer Time (Seconds)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wait_Time_Minutes__c</fullName>
        <formula>Wait_Time_Seconds__c / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wait Time (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wait_Time_Seconds__c</fullName>
        <label>Wait Time (Seconds)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZenDesk_Ticket_Link__c</fullName>
        <label>ZenDesk Ticket Link</label>
        <type>Url</type>
    </fields>
    <label>Angel Queue Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Time_Enter_Queue__c</columns>
        <columns>Agent_Name__c</columns>
        <columns>Date__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Talk_Time_Minutes__c</columns>
        <columns>Wait_Time_Minutes__c</columns>
        <columns>Total_Time_Minutes__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Caller ID Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Angel&apos;s Queue Activity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>